Search for blazor and search performance
Fixed is stale bug that would always load index from web
implemented search for blazor
added MatBlazor

--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/wwwroot/index.html
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/wwwroot/index.html
@@ -5,13 +5,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>WeeklyXamarin.Blazor</title>
-    <base href="/WeeklyXamarin.mobile/" />
+    <base href="/" />
+    <!--<base href="/WeeklyXamarin.mobile/" />-->
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="WeeklyXamarin.Blazor.Client.styles.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
+    <link href="_content/MatBlazor/dist/matBlazor.css" rel="stylesheet" />
     <script src="scripts/Connectivity.js"></script>
+    <script src="_content/MatBlazor/dist/matBlazor.js"></script>
 </head>
 
 <body>
