whoops, commited the wrong base URL in index

--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/wwwroot/index.html
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/wwwroot/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>WeeklyXamarin.Blazor</title>
-    <base href="/" />
-    <!--<base href="/WeeklyXamarin.mobile/" />-->
+    <!--<base href="/" />-->
+    <base href="/WeeklyXamarin.mobile/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="WeeklyXamarin.Blazor.Client.styles.css" rel="stylesheet" />
