--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/wwwroot/index.html
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/wwwroot/index.html
@@ -15,6 +15,7 @@
     <link href="_content/MatBlazor/dist/matBlazor.css" rel="stylesheet" />
     <script src="scripts/Connectivity.js"></script>
     <script src="_content/MatBlazor/dist/matBlazor.js"></script>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js" ></script >
 </head>
 
 <body>
