--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/wwwroot/index.html
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/wwwroot/index.html
@@ -14,8 +14,9 @@
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link href="_content/MatBlazor/dist/matBlazor.css" rel="stylesheet" />
     <script src="scripts/Connectivity.js"></script>
+    <script src="scripts/DarkTheme.js"></script>
     <script src="_content/MatBlazor/dist/matBlazor.js"></script>
-    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js" ></script >
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </head>
 
 <body>
