--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/wwwroot/index.html
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/wwwroot/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <!--<base href="/" />-->
-    <base href="/WeeklyXamarin.mobile/" />
+    <base href="/" />
     <title>Weekly Xamarin</title>
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
