--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/wwwroot/index.html
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/wwwroot/index.html
@@ -15,6 +15,7 @@
     <script src="scripts/Connectivity.js"></script>
     <script src="scripts/DarkTheme.js"></script>
     <script src="_content/MatBlazor/dist/matBlazor.js"></script>
+    <script defer src="lib/fortawesome/fontawesome-free/js/all.min.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </head>
 
